apps/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movie management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/href: https://radarr.${SECRET_DOMAIN}
    gethomepage.dev/widget.type: radarr
    gethomepage.dev/widget.url: http://radarr.media
    gethomepage.dev/widget.key: "${SECRET_RADARR_API_KEY}"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`radarr.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: radarr
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
